# boto3_moto

./: .gitignore  helpers.py  main.py  pyproject.toml
notebooks/: 00_setup_and_concepts.ipynb  01_s3_data_lake_foundations.ipynb  02_glue_catalog_management.ipynb  03_athena_serverless_query_pipeline.ipynb  04_ec2_fleet_management.ipynb  05_end_to_end_data_pipeline.ipynb  06_mock_exam.ipynb
notebooks/practice/: notebook.ipynb
