[project]
name = "moto-boto3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyspark>=4.1.1",
    "boto3>=1.42",
    "pandas>=2.2",
    "pyarrow>=16",
]

[dependency-groups]
dev = [
    "moto[athena,ec2,glue,s3]>=5.1.22",
    "ipykernel>=6.29",
    "notebook>=7.2",
    "requests>=2.32",
]
